Display labels in portal to avoid other elements overlapping

--- a/frontend/src/pages/CompanyProfile/CompanyProfile.module.css
+++ b/frontend/src/pages/CompanyProfile/CompanyProfile.module.css
@@ -39,11 +39,11 @@
 .companyInfoBarTile {
   background-color: transparent;
   width: 10%;
-  height: 30px;
+  height: 35px;
   text-align: center;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-right: 1px solid var(--color-shadow);
   border-bottom: 1px solid var(--color-shadow);
 
